@@ -20,6 +20,10 @@ public:
 
   void end ();
 
+  // The using declaration is added to resolve the "hides virtual functions"
+  // compilation warnings on Solaris.
+  using ACE_Task_Base::svc;
+
   /** Lanch a thread to write. **/
   virtual int svc (int pass);
 
