@@ -1,3 +1,10 @@
+Mon Nov 14 09:15:27 USMST 2005  Yan Dai  <dai_y@ociweb.com>
+
+        * tests/DCPS/LivelinessTest/Writer.h:
+        * tests/DCPS/FooTest5/common.h:
+
+          Fixed warnings on Solaris builds.
+          
 Sun Nov 13 23:51:43 USMST 2005  Yan Dai  <dai_y@ociweb.com>
 
         * performance-tests/DCPS/TCPListenerTest/Writer.cpp:
